# server/golang/repository/query/event_history.gen.go
@@ -1,0 +1,399 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package query
+
+import (
+	"context"
+	"database/sql"
+
+	"gorm.io/gorm"
+	"gorm.io/gorm/clause"
+	"gorm.io/gorm/schema"
+
+	"gorm.io/gen"
+	"gorm.io/gen/field"
+
+	"gorm.io/plugin/dbresolver"
+
+	"github.com/vitaliizinchenko/lab/model"
+)
+
+func newEventHistory(db *gorm.DB, opts ...gen.DOOption) eventHistory {
+	_eventHistory := eventHistory{}
+
+	_eventHistory.eventHistoryDo.UseDB(db, opts...)
+	_eventHistory.eventHistoryDo.UseModel(&model.EventHistory{})
+
+	tableName := _eventHistory.eventHistoryDo.TableName()
+	_eventHistory.ALL = field.NewAsterisk(tableName)
+	_eventHistory.ID = field.NewField(tableName, "id")
+	_eventHistory.Level = field.NewString(tableName, "level")
+	_eventHistory.EventType = field.NewString(tableName, "event_type")
+	_eventHistory.Details = field.NewString(tableName, "details")
+	_eventHistory.CreatedAt = field.NewTime(tableName, "created_at")
+
+	_eventHistory.fillFieldMap()
+
+	return _eventHistory
+}
+
+type eventHistory struct {
+	eventHistoryDo
+
+	ALL       field.Asterisk
+	ID        field.Field
+	Level     field.String
+	EventType field.String
+	Details   field.String
+	CreatedAt field.Time
+
+	fieldMap map[string]field.Expr
+}
+
+func (e eventHistory) Table(newTableName string) *eventHistory {
+	e.eventHistoryDo.UseTable(newTableName)
+	return e.updateTableName(newTableName)
+}
+
+func (e eventHistory) As(alias string) *eventHistory {
+	e.eventHistoryDo.DO = *(e.eventHistoryDo.As(alias).(*gen.DO))
+	return e.updateTableName(alias)
+}
+
+func (e *eventHistory) updateTableName(table string) *eventHistory {
+	e.ALL = field.NewAsterisk(table)
+	e.ID = field.NewField(table, "id")
+	e.Level = field.NewString(table, "level")
+	e.EventType = field.NewString(table, "event_type")
+	e.Details = field.NewString(table, "details")
+	e.CreatedAt = field.NewTime(table, "created_at")
+
+	e.fillFieldMap()
+
+	return e
+}
+
+func (e *eventHistory) GetFieldByName(fieldName string) (field.OrderExpr, bool) {
+	_f, ok := e.fieldMap[fieldName]
+	if !ok || _f == nil {
+		return nil, false
+	}
+	_oe, ok := _f.(field.OrderExpr)
+	return _oe, ok
+}
+
+func (e *eventHistory) fillFieldMap() {
+	e.fieldMap = make(map[string]field.Expr, 5)
+	e.fieldMap["id"] = e.ID
+	e.fieldMap["level"] = e.Level
+	e.fieldMap["event_type"] = e.EventType
+	e.fieldMap["details"] = e.Details
+	e.fieldMap["created_at"] = e.CreatedAt
+}
+
+func (e eventHistory) clone(db *gorm.DB) eventHistory {
+	e.eventHistoryDo.ReplaceConnPool(db.Statement.ConnPool)
+	return e
+}
+
+func (e eventHistory) replaceDB(db *gorm.DB) eventHistory {
+	e.eventHistoryDo.ReplaceDB(db)
+	return e
+}
+
+type eventHistoryDo struct{ gen.DO }
+
+type IEventHistoryDo interface {
+	gen.SubQuery
+	Debug() IEventHistoryDo
+	WithContext(ctx context.Context) IEventHistoryDo
+	WithResult(fc func(tx gen.Dao)) gen.ResultInfo
+	ReplaceDB(db *gorm.DB)
+	ReadDB() IEventHistoryDo
+	WriteDB() IEventHistoryDo
+	As(alias string) gen.Dao
+	Session(config *gorm.Session) IEventHistoryDo
+	Columns(cols ...field.Expr) gen.Columns
+	Clauses(conds ...clause.Expression) IEventHistoryDo
+	Not(conds ...gen.Condition) IEventHistoryDo
+	Or(conds ...gen.Condition) IEventHistoryDo
+	Select(conds ...field.Expr) IEventHistoryDo
+	Where(conds ...gen.Condition) IEventHistoryDo
+	Order(conds ...field.Expr) IEventHistoryDo
+	Distinct(cols ...field.Expr) IEventHistoryDo
+	Omit(cols ...field.Expr) IEventHistoryDo
+	Join(table schema.Tabler, on ...field.Expr) IEventHistoryDo
+	LeftJoin(table schema.Tabler, on ...field.Expr) IEventHistoryDo
+	RightJoin(table schema.Tabler, on ...field.Expr) IEventHistoryDo
+	Group(cols ...field.Expr) IEventHistoryDo
+	Having(conds ...gen.Condition) IEventHistoryDo
+	Limit(limit int) IEventHistoryDo
+	Offset(offset int) IEventHistoryDo
+	Count() (count int64, err error)
+	Scopes(funcs ...func(gen.Dao) gen.Dao) IEventHistoryDo
+	Unscoped() IEventHistoryDo
+	Create(values ...*model.EventHistory) error
+	CreateInBatches(values []*model.EventHistory, batchSize int) error
+	Save(values ...*model.EventHistory) error
+	First() (*model.EventHistory, error)
+	Take() (*model.EventHistory, error)
+	Last() (*model.EventHistory, error)
+	Find() ([]*model.EventHistory, error)
+	FindInBatch(batchSize int, fc func(tx gen.Dao, batch int) error) (results []*model.EventHistory, err error)
+	FindInBatches(result *[]*model.EventHistory, batchSize int, fc func(tx gen.Dao, batch int) error) error
+	Pluck(column field.Expr, dest interface{}) error
+	Delete(...*model.EventHistory) (info gen.ResultInfo, err error)
+	Update(column field.Expr, value interface{}) (info gen.ResultInfo, err error)
+	UpdateSimple(columns ...field.AssignExpr) (info gen.ResultInfo, err error)
+	Updates(value interface{}) (info gen.ResultInfo, err error)
+	UpdateColumn(column field.Expr, value interface{}) (info gen.ResultInfo, err error)
+	UpdateColumnSimple(columns ...field.AssignExpr) (info gen.ResultInfo, err error)
+	UpdateColumns(value interface{}) (info gen.ResultInfo, err error)
+	UpdateFrom(q gen.SubQuery) gen.Dao
+	Attrs(attrs ...field.AssignExpr) IEventHistoryDo
+	Assign(attrs ...field.AssignExpr) IEventHistoryDo
+	Joins(fields ...field.RelationField) IEventHistoryDo
+	Preload(fields ...field.RelationField) IEventHistoryDo
+	FirstOrInit() (*model.EventHistory, error)
+	FirstOrCreate() (*model.EventHistory, error)
+	FindByPage(offset int, limit int) (result []*model.EventHistory, count int64, err error)
+	ScanByPage(result interface{}, offset int, limit int) (count int64, err error)
+	Rows() (*sql.Rows, error)
+	Row() *sql.Row
+	Scan(result interface{}) (err error)
+	Returning(value interface{}, columns ...string) IEventHistoryDo
+	UnderlyingDB() *gorm.DB
+	schema.Tabler
+}
+
+func (e eventHistoryDo) Debug() IEventHistoryDo {
+	return e.withDO(e.DO.Debug())
+}
+
+func (e eventHistoryDo) WithContext(ctx context.Context) IEventHistoryDo {
+	return e.withDO(e.DO.WithContext(ctx))
+}
+
+func (e eventHistoryDo) ReadDB() IEventHistoryDo {
+	return e.Clauses(dbresolver.Read)
+}
+
+func (e eventHistoryDo) WriteDB() IEventHistoryDo {
+	return e.Clauses(dbresolver.Write)
+}
+
+func (e eventHistoryDo) Session(config *gorm.Session) IEventHistoryDo {
+	return e.withDO(e.DO.Session(config))
+}
+
+func (e eventHistoryDo) Clauses(conds ...clause.Expression) IEventHistoryDo {
+	return e.withDO(e.DO.Clauses(conds...))
+}
+
+func (e eventHistoryDo) Returning(value interface{}, columns ...string) IEventHistoryDo {
+	return e.withDO(e.DO.Returning(value, columns...))
+}
+
+func (e eventHistoryDo) Not(conds ...gen.Condition) IEventHistoryDo {
+	return e.withDO(e.DO.Not(conds...))
+}
+
+func (e eventHistoryDo) Or(conds ...gen.Condition) IEventHistoryDo {
+	return e.withDO(e.DO.Or(conds...))
+}
+
+func (e eventHistoryDo) Select(conds ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.Select(conds...))
+}
+
+func (e eventHistoryDo) Where(conds ...gen.Condition) IEventHistoryDo {
+	return e.withDO(e.DO.Where(conds...))
+}
+
+func (e eventHistoryDo) Order(conds ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.Order(conds...))
+}
+
+func (e eventHistoryDo) Distinct(cols ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.Distinct(cols...))
+}
+
+func (e eventHistoryDo) Omit(cols ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.Omit(cols...))
+}
+
+func (e eventHistoryDo) Join(table schema.Tabler, on ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.Join(table, on...))
+}
+
+func (e eventHistoryDo) LeftJoin(table schema.Tabler, on ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.LeftJoin(table, on...))
+}
+
+func (e eventHistoryDo) RightJoin(table schema.Tabler, on ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.RightJoin(table, on...))
+}
+
+func (e eventHistoryDo) Group(cols ...field.Expr) IEventHistoryDo {
+	return e.withDO(e.DO.Group(cols...))
+}
+
+func (e eventHistoryDo) Having(conds ...gen.Condition) IEventHistoryDo {
+	return e.withDO(e.DO.Having(conds...))
+}
+
+func (e eventHistoryDo) Limit(limit int) IEventHistoryDo {
+	return e.withDO(e.DO.Limit(limit))
+}
+
+func (e eventHistoryDo) Offset(offset int) IEventHistoryDo {
+	return e.withDO(e.DO.Offset(offset))
+}
+
+func (e eventHistoryDo) Scopes(funcs ...func(gen.Dao) gen.Dao) IEventHistoryDo {
+	return e.withDO(e.DO.Scopes(funcs...))
+}
+
+func (e eventHistoryDo) Unscoped() IEventHistoryDo {
+	return e.withDO(e.DO.Unscoped())
+}
+
+func (e eventHistoryDo) Create(values ...*model.EventHistory) error {
+	if len(values) == 0 {
+		return nil
+	}
+	return e.DO.Create(values)
+}
+
+func (e eventHistoryDo) CreateInBatches(values []*model.EventHistory, batchSize int) error {
+	return e.DO.CreateInBatches(values, batchSize)
+}
+
+// Save : !!! underlying implementation is different with GORM
+// The method is equivalent to executing the statement: db.Clauses(clause.OnConflict{UpdateAll: true}).Create(values)
+func (e eventHistoryDo) Save(values ...*model.EventHistory) error {
+	if len(values) == 0 {
+		return nil
+	}
+	return e.DO.Save(values)
+}
+
+func (e eventHistoryDo) First() (*model.EventHistory, error) {
+	if result, err := e.DO.First(); err != nil {
+		return nil, err
+	} else {
+		return result.(*model.EventHistory), nil
+	}
+}
+
+func (e eventHistoryDo) Take() (*model.EventHistory, error) {
+	if result, err := e.DO.Take(); err != nil {
+		return nil, err
+	} else {
+		return result.(*model.EventHistory), nil
+	}
+}
+
+func (e eventHistoryDo) Last() (*model.EventHistory, error) {
+	if result, err := e.DO.Last(); err != nil {
+		return nil, err
+	} else {
+		return result.(*model.EventHistory), nil
+	}
+}
+
+func (e eventHistoryDo) Find() ([]*model.EventHistory, error) {
+	result, err := e.DO.Find()
+	return result.([]*model.EventHistory), err
+}
+
+func (e eventHistoryDo) FindInBatch(batchSize int, fc func(tx gen.Dao, batch int) error) (results []*model.EventHistory, err error) {
+	buf := make([]*model.EventHistory, 0, batchSize)
+	err = e.DO.FindInBatches(&buf, batchSize, func(tx gen.Dao, batch int) error {
+		defer func() { results = append(results, buf...) }()
+		return fc(tx, batch)
+	})
+	return results, err
+}
+
+func (e eventHistoryDo) FindInBatches(result *[]*model.EventHistory, batchSize int, fc func(tx gen.Dao, batch int) error) error {
+	return e.DO.FindInBatches(result, batchSize, fc)
+}
+
+func (e eventHistoryDo) Attrs(attrs ...field.AssignExpr) IEventHistoryDo {
+	return e.withDO(e.DO.Attrs(attrs...))
+}
+
+func (e eventHistoryDo) Assign(attrs ...field.AssignExpr) IEventHistoryDo {
+	return e.withDO(e.DO.Assign(attrs...))
+}
+
+func (e eventHistoryDo) Joins(fields ...field.RelationField) IEventHistoryDo {
+	for _, _f := range fields {
+		e = *e.withDO(e.DO.Joins(_f))
+	}
+	return &e
+}
+
+func (e eventHistoryDo) Preload(fields ...field.RelationField) IEventHistoryDo {
+	for _, _f := range fields {
+		e = *e.withDO(e.DO.Preload(_f))
+	}
+	return &e
+}
+
+func (e eventHistoryDo) FirstOrInit() (*model.EventHistory, error) {
+	if result, err := e.DO.FirstOrInit(); err != nil {
+		return nil, err
+	} else {
+		return result.(*model.EventHistory), nil
+	}
+}
+
+func (e eventHistoryDo) FirstOrCreate() (*model.EventHistory, error) {
+	if result, err := e.DO.FirstOrCreate(); err != nil {
+		return nil, err
+	} else {
+		return result.(*model.EventHistory), nil
+	}
+}
+
+func (e eventHistoryDo) FindByPage(offset int, limit int) (result []*model.EventHistory, count int64, err error) {
+	result, err = e.Offset(offset).Limit(limit).Find()
+	if err != nil {
+		return
+	}
+
+	if size := len(result); 0 < limit && 0 < size && size < limit {
+		count = int64(size + offset)
+		return
+	}
+
+	count, err = e.Offset(-1).Limit(-1).Count()
+	return
+}
+
+func (e eventHistoryDo) ScanByPage(result interface{}, offset int, limit int) (count int64, err error) {
+	count, err = e.Count()
+	if err != nil {
+		return
+	}
+
+	err = e.Offset(offset).Limit(limit).Scan(result)
+	return
+}
+
+func (e eventHistoryDo) Scan(result interface{}) (err error) {
+	return e.DO.Scan(result)
+}
+
+func (e eventHistoryDo) Delete(models ...*model.EventHistory) (result gen.ResultInfo, err error) {
+	return e.DO.Delete(models)
+}
+
+func (e *eventHistoryDo) withDO(do gen.Dao) *eventHistoryDo {
+	e.DO = *do.(*gen.DO)
+	return e
+}
